--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div>
+    <div id="root" style="width: 50%; margin: 0 auto"></div>
+  </div>
 </body>
 
 </html>
